Attempt to fix rendering issue on iPhone

--- a/style.css
+++ b/style.css
@@ -1042,3 +1042,19 @@ span.title {
   }
 }
 
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .timeline-container {
+    background-size: cover;
+    background-position: center;
+    image-rendering: optimizeQuality;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -webkit-image-rendering: -webkit-optimize-contrast;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
+    image-rendering: pixelated;
+  }
+}
